# bluebench

./: .bluebench_annotations.json  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  bluebench_real_verify.bbtest  bluebench_ui_verify.bbtest  pyproject.toml  verify_run.bbtest
backend/: README.md  chain_artifact.py  main.py  stress_engine.py  stress_spec.py  triage_window.py  version.py
docs/: README.md  ai_use_case_design.md  ai_use_case_tasks.md  architecture.md  bluebench_architecture.md  bluebench_evidence_engine_scaffold_prompt.md  bluebench_real_verify_results.md  canonical_flow_hardening_review.md  codex_cli_efficiency.md  critical_project_report.md  inspector_layout_critique.md  inspector_layout_tasks.md  new_app_triage_design.md  new_app_triage_tasks.md  node_inspector_window.md  performance_report.md  quickstart.md  scanner_performance_plan.md  scanner_report.md  system_interrogation_bluebench.md  terminology.md  tooling_todo.md  ui_layout_critique.md  ui_layout_tasks.md
frontend/: README.md
layout/: __init__.py  engine.py  grid_layout.py  interval_map.py  layout_cache.py
projects/: README.md
scripts/: README.md  __init__.py  run_bluebench.py  run_scanner.py
tests/: README.md  test_action_packet.py  test_architecture_guards.py  test_canonical_flow.py  test_canonical_flow_stress.py  test_chain_artifact.py  test_cold_start.py  test_cold_start_investigator.py  test_context_cli.py  test_context_compression.py  test_context_pack.py  test_context_session_state.py  test_contracts.py  test_evidence_engine.py  test_experiment_runner.py  test_history.py  (+16 more)
(+105 files in other folders)
